2nd material test page, adds iconfont from npm

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 </h1>
 
 <div>
-  <app-material-test></app-material-test>
+  <!--<app-material-test></app-material-test>-->
+  <app-material-test2></app-material-test2>
 </div>
