putting the material tests to /md-test2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
 
 <div>
-  <!--<app-material-test></app-material-test>-->
-  <app-material-test2></app-material-test2>
+  <router-outlet></router-outlet>
 </div>
