--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
 <app-header></app-header>
 
-<div>
+<div class="app-content">
   <router-outlet></router-outlet>
 </div>
+
+<hr>
+
+<md-card>
+  <p>
+    <a [routerLink]="['md-test2']">Material Design Playground</a>
+  </p>
+</md-card>
